create possibility to delete a known team